# strands-ai-agentcore-demo

./: .env.example  .gitignore  Dockerfile.local  ECR_DEPLOYMENT_QUICKSTART.md  README.md  docker-local-test.sh  load_env.sh  pyproject.toml  requirements.txt
deployment/: Dockerfile  README.md  deploy.py  deploy_ecr.py  deploy_local.py  deploy_to_agentcore.py  deploy_utils.py  invoke_agent.py  requirements.txt  simple_deploy.py
docs/: AGENT_CORE_DEPLOYMENT_GUIDE.md  AWS_IAM_SETUP_GUIDE.md  AWS_SETUP_GUIDE.md  GAMMA_PRESENTATION_CONTENT.md  MORPHEUS_TESTING_GUIDE.md  README-DOCKER.md  README.md  TESTING_DEPLOYED_AGENT.md
scripts/: README.md  kill_port.py  requirements.txt  test_bedrockagent.py  test_endpoint.py
src/agents/: openai_agent.py
src/config/: settings.py
src/utils/: __init__.py  helpers.py
tests/: test_agent_basic.py
